--- a/style.css
+++ b/style.css
@@ -1,12 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap');
-body  {font-family: 'Poppins', sans-serif;}
-h1{color: darkblue;}  
+body  {font-family: 'Poppins', sans-serif;
+  text-align: center;
+  background-color: blueviolet;
+}
+h1{color: darkblue;
+}  
 .profile-img{width: 80%;
-  border-radius: 05%;
+  border-radius: 50%;
   }
+  p{color:white;}
 .btn{display: block;
   color: black;
-  padding:30px;
+  padding:20px;
   background: indianred;
-  margin:16px;
+  margin:10px;
+box-shadow: 10px ; 
+}
+
+.profile-img{width:150px;
+  border-radius:550px;
 }
